js/js.translator/testData/incremental/invalidation/interfaceOpenMethodsInOpenClass/lib1/ClassB.1.kt
open class B : A<Int> {
    override fun test() = 1
}
